[gd_scene load_steps=2 format=3 uid="uid://bh5nm27pwk6gh"]

[ext_resource type="Script" path="res://source/ui/menu_level/lobby_player.gd" id="1_o3gnx"]

[node name="LobbyPlayer" type="Control"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o3gnx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
alignment = 1

[node name="PlayerLabel" type="Label" parent="PanelContainer/VBoxContainer/HFlowContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Player "
vertical_alignment = 3

[node name="PlayerNumber" type="Label" parent="PanelContainer/VBoxContainer/HFlowContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "X - Status Unknown"
vertical_alignment = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Pick your color"
color = Color(1, 1, 1, 1)

[node name="ReadyButton" type="Button" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
toggle_mode = true
text = "Not Connected"

[connection signal="color_changed" from="PanelContainer/VBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/ReadyButton" to="." method="_on_ready_button_toggled"]
